--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.5",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/mdx": "^2.0.13",
     "gray-matter": "^4.0.3",
     "next": "14.2.4",
